Fixed up menu. Added mobitracer support in kwxclient.

--- a/app/diwi/trunk/client/mobile/Diwi/Properties/Resources.resx
+++ b/app/diwi/trunk/client/mobile/Diwi/Properties/Resources.resx
@@ -120,6 +120,12 @@
   <data name="GpsSerialPort" xml:space="preserve">
     <value>COM0</value>
   </data>
+  <data name="KwApp" xml:space="preserve">
+    <value>geoapp</value>
+  </data>
+  <data name="KwRole" xml:space="preserve">
+    <value>user</value>
+  </data>
   <data name="KwxServerPassword" xml:space="preserve">
     <value>testdiwi</value>
   </data>
