ron, werkend aan het inlogscherm, url veranderd in de Resources

--- a/app/diwi/trunk/client/mobile/Diwi/Properties/Resources.resx
+++ b/app/diwi/trunk/client/mobile/Diwi/Properties/Resources.resx
@@ -136,7 +136,7 @@
     <value>2</value>
   </data>
   <data name="KwxServerUrl" xml:space="preserve">
-    <value>http://www.geotracing.com/gt/proto.srv</value>
+    <value>http://test.digitalewichelroede.nl/diwi/proto.srv</value>
   </data>
   <data name="KwxServerUsername" xml:space="preserve">
     <value>diwitest</value>
