--- a/app/diwi/trunk/client/mobile/Diwi/Properties/Resources.resx
+++ b/app/diwi/trunk/client/mobile/Diwi/Properties/Resources.resx
@@ -130,7 +130,7 @@
     <value>http://test.digitalewichelroede.nl/diwi/media.srv</value>
   </data>
   <data name="KwxServerPassword" xml:space="preserve">
-    <value>diwitom</value>
+    <value>user</value>
   </data>
   <data name="KwxServerProtocolVersion" xml:space="preserve">
     <value>4.0</value>
@@ -142,6 +142,6 @@
     <value>http://test.digitalewichelroede.nl/diwi/proto.srv</value>
   </data>
   <data name="KwxServerUsername" xml:space="preserve">
-    <value>diwitom</value>
+    <value>geoapp-user</value>
   </data>
 </root>
