wnp: fixes phone app

--- a/app/walkandplay/trunk/client/phone/resources/locales/EN_US/messages.txt
+++ b/app/walkandplay/trunk/client/phone/resources/locales/EN_US/messages.txt
@@ -19,7 +19,7 @@ var:MyExampleVariable=Hello World
 # Again MIDlet-attributes defined override the one defined in the <info>-
 # and <jad>-sections of your build.xml
 
-MIDlet-Description=Mobile Learning Game Kit
+MIDlet-Description=WalkAndPlay
 
 menu.Create=Create
 menu.GPS=GPS
