wnp: minor bug fixing

--- a/app/walkandplay/trunk/client/phone/resources/locales/EN_US/messages.txt
+++ b/app/walkandplay/trunk/client/phone/resources/locales/EN_US/messages.txt
@@ -78,3 +78,5 @@ settings.Account=Account
 settings.Version=Version
 settings.DemoModeOff=Demo Mode OFF
 settings.DemoModeOn=Demo Mode ON
+
+task.Info=Fill in the right answer and send a photo, video or audioclip to fullfill the task.
