wnp: back to basics - get a stable playdisplay

--- a/app/walkandplay/trunk/client/phone/resources/locales/EN_US/messages.txt
+++ b/app/walkandplay/trunk/client/phone/resources/locales/EN_US/messages.txt
@@ -65,7 +65,7 @@ play.ToggleMap=Toggle Map [0]
 play.Scores=Show scores
 play.ShowLog=Show log
 play.HideLog=Hide log
-play.IM=Send message
+play.IM=Messages
 play.Back=Stop game
 play.ShowIntro=Show intro
 play.HideIntro=Hide intro
