--- a/app/walkandplay/trunk/client/phone/resources/locales/NL/messages.txt
+++ b/app/walkandplay/trunk/client/phone/resources/locales/NL/messages.txt
@@ -65,7 +65,7 @@ play.ToggleMap=Andere kaart [0]
 play.Scores=Toon scores
 play.ShowLog=Toon status
 play.HideLog=Verberg status
-play.IM=Verstuur bericht
+play.IM=Berichten
 play.Back=Stop spel
 play.ShowIntro=Toon intro
 play.HideIntro=Verberg intro
